--- a/src/core/styles/components/button-group/_button-group-component.scss
+++ b/src/core/styles/components/button-group/_button-group-component.scss
@@ -9,34 +9,34 @@
     $this: bem--selector-to-string(&);
     @include register-component(str-slice($this, 2, -1));
 
-    @extend %igx-bgroup-display !optional;
+    @extend %igx-group-display !optional;
 
     @include e(item) {
-        @extend %igx-bgroup-item !optional;
+        @extend %igx-group-item !optional;
     }
 
     @include e(item, $m: selected) {
-        @extend %igx-bgroup-item !optional;
-        @extend %igx-bgroup-item-selected !optional;
+        @extend %igx-group-item !optional;
+        @extend %igx-group-item-selected !optional;
     }
 
     @include e(item-content) {
-        @extend %igx-bgroup-item-content !optional;
+        @extend %igx-group-item-content !optional;
     }
 
     @include m(vertical) {
 
-        @extend %igx-bgroup-display !optional;
-        @extend %igx-bgroup-vertical !optional;
+        @extend %igx-group-display !optional;
+        @extend %igx-group-vertical !optional;
 
         @include e(item) {
-            @extend %igx-bgroup-item !optional;
-            @extend %igx-bgroup-item-vertical !optional;
+            @extend %igx-group-item !optional;
+            @extend %igx-group-item-vertical !optional;
         }
 
         @include e(item, $m: selected) {
-            @extend %igx-bgroup-item !optional;
-            @extend %igx-bgroup-item-selected !optional;
+            @extend %igx-group-item !optional;
+            @extend %igx-group-item-selected !optional;
         }
     }
 }
