--- a/src/core/styles/components/button-group/_button-group-theme.scss
+++ b/src/core/styles/components/button-group/_button-group-theme.scss
@@ -4,52 +4,42 @@
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
 
-
-/// Button Group Theme
-/// @param {Color} $item-text-color [null]- Set text color for button group items.
-/// @param {Color} $item-background [null] - Set background color for button group items .
-/// @param {Color} $$item-border-color [null] - Set border color between button group items.
+/// If only background color is specified, text/icon color
+/// will be assigned automatically to a contrasting color.
+/// Does ___not___ apply for disabled state colors.
+/// @param {Color} $item-text-color [null]- The text color for button group items.
+/// @param {Color} $item-background [null] - The background color for button group items .
+/// @param {Color} $item-border-color [null] - The border color between button group items.
 ///
-/// @param {Color} $icon-text-color [null] - Set color for buttons with icons.
+/// @param {Color} $item-hover-text-color [null] - The hover text color for button group items.
+/// @param {Color} $item-hover-background [null] - The hover background color for button group items.
 ///
-/// @param {Color} $item-hover-text-color [null] - Set text color for button group items in :hover state.
-/// @param {Color} $item-hover-background [null] - Set background color for button group items in :hover state.
+/// @param {Color} $item-selected-text-color [null]- The text color for a selected item in the button group.
+/// @param {Color} $item-selected-background [null] - The background color for a selected item in the button group.
+/// @param {Color} $item-selected-border-color [null] - The border color for a selected item from the button group.
 ///
-/// @param {Color} $icon-hover-text-color [null]- Set color for buttons with icons in :hover state.
-///
-/// @param {Color} $item-selected-text-color [null]- Set text color for a selected item from the button group.
-/// @param {Color} $item-selected-background [null] - Set background color for a selected item from the button group.
-/// @param {Color} $item-selected-border-color [null] - Set border color for a selected item from the button group.
-///
-/// @param {Color} $icon-selected-text-color [null] - Set icon color for a selected item from the button group.
-///
-/// @param {Color} $disabled-text-color [null]- Set text color/icon color for a disabled item from the button group.
-/// @param {Color} $disabled-background-color [null] - Set background color for a disabled item from the button group.
+/// @param {Color} $disabled-text-color [null]- The text/icon color for a disabled item in the button group.
+/// @param {Color} $disabled-background-color [null] - The background color for a disabled item in the button group.
 ///
 /// @requires text-contrast
 ///
-/// @example scss Change the background, text color and border color for button group
+/// @example scss Change the background, text, and border colors
 ///   $my-button-group-theme: igx-button-group-theme(
 ///     $item-text-color: white,
-///     $item-background: rgba(0,0,0, .8),
+///     $item-background: rgba(0, 0, 0, .8),
 ///     $$item-border-color: #dadada
 ///   );
 ///   // Pass the theme to the igx-button-group component mixin
-///   igx-button-group($my-button-group-theme);
-
+///   @include igx-button-group($my-button-group-theme);
 @function igx-button-group-theme(
     // NORMAL
     $item-text-color: null,
     $item-background: null,
     $item-border-color: null,
 
-    $icon-text-color: null,
-
     // HOVER
     $item-hover-text-color: null,
     $item-hover-background: null,
-
-    $icon-hover-text-color: null,
 
     // DISABLED
     $disabled-text-color: null,
@@ -58,20 +48,13 @@
     // SELECTED
     $item-selected-text-color: null,
     $item-selected-background: null,
-    $item-selected-border-color: null,
-
-    $icon-selected-text-color: null
+    $item-selected-border-color: null
 ) {
     $disabled-background-color: $item-background;
 
     // -- Color
     @if not($item-text-color) and $item-background  {
         $item-text-color: text-contrast($item-background);
-    }
-
-    // -- icon
-    @if not($icon-text-color) and $item-background {
-        $icon-text-color: text-contrast($item-background);
     }
 
     // -- Background
@@ -82,11 +65,6 @@
     // -- Color
     @if not($item-hover-text-color) and $item-hover-background {
         $item-hover-text-color: text-contrast($item-background);
-    }
-
-    // -- Icon color
-    @if not($icon-hover-text-color) and $item-hover-background {
-        $icon-hover-text-color: text-contrast($item-background);
     }
 
     // -- Background
@@ -109,11 +87,6 @@
         $item-selected-text-color: text-contrast($item-background);
     }
 
-    // -- Icon color
-    @if not($icon-selected-text-color) and $item-selected-background {
-        $icon-selected-text-color: text-contrast($item-background);
-    }
-
     @if not($disabled-text-color) and $item-background {
         $disabled-text-color: rgba(text-contrast($item-background), .3);
     }
@@ -122,13 +95,11 @@
         // NORMAL
         item-text-color: $item-text-color,
         item-background: $item-background,
-        icon-text-color: $icon-text-color,
         item-border-color: $item-border-color,
 
         // HOVER
         item-hover-text-color: $item-hover-text-color,
         item-hover-background: $item-hover-background,
-        icon-hover-text-color: $icon-hover-text-color,
 
         // DISABLED
         disabled-text-color:$disabled-text-color,
@@ -137,13 +108,11 @@
         // SELECTED
         item-selected-text-color: $item-selected-text-color,
         item-selected-background: $item-selected-background,
-        item-selected-border-color: $item-selected-border-color,
-        icon-selected-text-color: $icon-selected-text-color,
+        item-selected-border-color: $item-selected-border-color
     );
 }
 
 
-/// Button group Component
 /// @param {Map} $theme - The theme used to style the component.
 /// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @requires igx-button-group-theme
@@ -152,69 +121,65 @@
     $default-theme: igx-button-group-theme(
         // NORMAL
         $item-text-color: igx-color($palette, 'grays', 500),
-        $icon-text-color: igx-color($palette, 'grays', 500),
-
         $item-background: #fff,
         $item-border-color: transparent,
 
         // HOVER
         $item-hover-text-color: igx-color($palette, 'grays', 800),
-        $icon-hover-text-color: igx-color($palette, 'grays', 800),
-
         $item-hover-background: igx-color($palette, 'grays', 400),
+
         // SELECTED
         $item-selected-text-color: igx-color($palette, 'grays', 800),
-        $icon-selected-text-color: igx-color($palette, 'grays', 800),
-
         $item-selected-background: igx-color($palette, 'grays', 400),
         $item-selected-border-color: rgba(igx-color($palette, 'grays', 500), .12),
+
         // DISABLED
         $disabled-text-color: igx-color($palette, 'grays', 300),
         $disabled-background-color: transparent
     );
 
     // Group layout
-    $bgroup-radius: 2px;
-    $bgroup-shadow: igx-elevation($elevations, 2);
+    $group-radius: 2px;
+    $group-shadow: igx-elevation($elevations, 2);
 
     // Item style
-    $bgroup-item-minwidth: 24px;
-    $bgroup-item-minheight: 36px;
-    $bgroup-item-border-thickness: 1px;
-    $bgroup-item-font-weight: 600;
+    $group-item-min-width: 24px;
+    $group-item-min-height: 36px;
+    $group-item-border-thickness: 1px;
+    $group-item-font-weight: 600;
 
     // Margin between item elements
-    $bgroup-items-margin: rem(10px, 16px);
+    $group-items-margin: rem(10px, 16px);
     $this: extend($default-theme, $theme);
 
-    %igx-bgroup-display {
+    %igx-group-display {
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
-        border-radius: $bgroup-radius;
-        box-shadow: $bgroup-shadow;
+        border-radius: $group-radius;
+        box-shadow: $group-shadow;
         transition: box-shadow .2s ease;
         overflow: hidden;
         background-color: map-get($this, 'item-background');
     }
 
-    %igx-bgroup-vertical {
+    %igx-group-vertical {
         flex-flow: column nowrap;
     }
 
-    %igx-bgroup-item {
+    %igx-group-item {
         box-sizing: content-box;
         flex-grow: 1;
         flex-basis: 0;
         border: initial;
-        border-left: $bgroup-item-border-thickness solid;
-        border-right: $bgroup-item-border-thickness solid;
+        border-left: $group-item-border-thickness solid;
+        border-right: $group-item-border-thickness solid;
         border-color: map-get($this, 'item-border-color');
-        min-width: $bgroup-item-minwidth;
-        min-height: $bgroup-item-minheight;
+        min-width: $group-item-min-width;
+        min-height: $group-item-min-height;
         border-radius: 0;
         color: map-get($this, 'item-text-color');
-        font-weight: $bgroup-item-font-weight;
+        font-weight: $group-item-font-weight;
         background-color: map-get($this, 'item-background');
 
         &:first-child {
@@ -233,18 +198,18 @@
         }
     }
 
-    %igx-bgroup-item-vertical {
+    %igx-group-item-vertical {
         border-left: 0;
         border-right: 0;
-        border-bottom: $bgroup-item-border-thickness solid;
-        border-color: map-get($this, item-border-color);
+        border-bottom: $group-item-border-thickness solid;
+        border-color: map-get($this, 'item-border-color');
 
         &:first-child {
             border-top: 0;
         }
     }
 
-    %igx-bgroup-item-selected {
+    %igx-group-item-selected {
         color: map-get($this, 'item-selected-text-color');
         background: map-get($this, 'item-selected-background');
         border-color: map-get($this, 'item-selected-border-color');
@@ -259,7 +224,7 @@
 
 
 
-    %igx-bgroup-item-content {
+    %igx-group-item-content {
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
@@ -268,7 +233,7 @@
         text-align: center;
 
         * ~ * {
-            margin-left: $bgroup-items-margin;
+            margin-left: $group-items-margin;
         }
     }
 }
