--- a/src/core/styles/components/button/_button-theme.scss
+++ b/src/core/styles/components/button/_button-theme.scss
@@ -4,51 +4,50 @@
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
 
-
-/// Buttons Theme
-/// @param {border-radius} $button-roundness [null]- Changes the button roundness(border-radius) for all button types.
+/// If only background color is specified, text/icon color
+/// will be assigned automatically to a contrasting color.
+/// Does ___not___ apply for disabled state colors.
+/// @param {String} $button-roundness [null]- The edge roundness(border-radius) for flat and raised buttons.
 ///
-/// @param {Color} $flat-text-color [null] - Changes the text color inside the flat button.
-/// @param {Color} $flat-hover-text-color [null] - Changes the text color in :hover state inside the flat button.
-/// @param {Color} $flat-background [null] - Changes the background color of the flat button.
-/// @param {Color} $flat-hover-background [null] - Changes the background color in :hover state of the flat button.
-/// @param {Color} $flat-focus-text-color [null] - Changes the text color in :focus state inside the flat button.
-/// @param {Color} $flat-focus-background [null] - Changes the background color in :focus state of the flat button.
+/// @param {Color} $flat-text-color [null] - The idle text color of a flat button.
+/// @param {Color} $flat-hover-text-color [null] - The hover text color of a flat button.
+/// @param {Color} $flat-background [null] - The background color of a flat button.
+/// @param {Color} $flat-hover-background [null] - The hover background color of a flat button.
+/// @param {Color} $flat-focus-background [null] - The focus background color of a flat button.
 ///
-/// @param {Color} $raised-text-color [null] - Changes the text color inside the raised button.
-/// @param {Color} $raised-hover-text-color [null] - Changes the text color in :hover state inside the raised button.
-/// @param {Color} $raised-background [null] - Changes the background color of the raised button.
-/// @param {Color} $raised-hover-background [null] - Changes the background color in :hover state of the raised button.
-/// @param {Color} $raised-focus-text-color [null] - Changes the text color in :focus state inside the raised button.
-/// @param {Color} $raised-focus-background [null] - Changes the background color in :focus state of the raised button.
+/// @param {Color} $raised-text-color [null] - The idle text color of a raised button.
+/// @param {Color} $raised-hover-text-color [null] - The hover text color of a raised button.
+/// @param {Color} $raised-background [null] - The background color of a raised button.
+/// @param {Color} $raised-hover-background [null] - The hover background of a raised button.
+/// @param {Color} $raised-focus-text-color [null] - The focus text color of a raised button.
+/// @param {Color} $raised-focus-background [null] - The focus background color of a raised button.
 ///
-/// @param {Color} $fab-text-color [null] - Changes the text color inside the fab button.
-/// @param {Color} $fab-hover-text-color [null] - Changes the text color in :hover state inside the fab button.
-/// @param {Color} $fab-background [null] - Changes the background color of the fab button.
-/// @param {Color} $fab-hover-background [null] - Changes the background color in :hover state of the fab button.
-/// @param {Color} $fab-focus-text-color [null] - Changes the text color in :focus state inside the fab button.
-/// @param {Color} $fab-focus-background [null] - Changes the background color in :focus state of the fab button.
+/// @param {Color} $fab-text-color [null] - The text color of a floating action button.
+/// @param {Color} $fab-hover-text-color [null] - The hover text color of a floating action button.
+/// @param {Color} $fab-background [null] - The background color of a floating action button.
+/// @param {Color} $fab-hover-background [null] - The hover background color of a floating action button.
+/// @param {Color} $fab-focus-text-color [null] - The focus text color of a floating action button.
+/// @param {Color} $fab-focus-background [null] - The focus background color of floating action button.
 ///
-/// @param {Color} $icon-color [null] - Changes the icon color inside the icon button.
-/// @param {Color} $icon-hover-color [null] - Changes the icon color in :hover state inside the icon button.
-/// @param {Color} $icon-background [null] - Changes the background color of the fab button.
-/// @param {Color} $icon-hover-background [null] - Changes the background color in :hover state of the icon button.
-/// @param {Color} $icon-focus-color [null] - Changes the icon color in :focus state inside the icon button.
-/// @param {Color} $icon-focus-background [null] - The icon color used for avatars of type icon.
+/// @param {Color} $icon-color [null] - The icon color of an icon button.
+/// @param {Color} $icon-hover-color [null] - The hover icon color of an icon button.
+/// @param {Color} $icon-background [null] - The background color of the an icon button.
+/// @param {Color} $icon-hover-background [null] - The hover background color of an icon button.
+/// @param {Color} $icon-focus-color [null] - The focus icon color of an icon button.
+/// @param {Color} $icon-focus-background [null] - The focus background color an icon button.
 ///
-/// @param {Color} $disabled-color [null] - Changes the text/icon color in disabled mode.
-/// @param {Color} $disabled-background [null] - Changes the background color in disabled mode.
+/// @param {Color} $disabled-color [null] - The disabled text/icon color of a button.
+/// @param {Color} $disabled-background [null] - The disabled background color of raised, fab, or icon buttons.
 ///
 /// @requires text-contrast
 ///
-/// @example scss Change the background and text colors in raised button
+/// @example scss Change the background and text colors in raised buttons
 ///   $my-button-theme: igx-button-theme(
 ///     $raised-text-color: white,
 ///     $raised-background: black
 ///   );
-///   // Pass the theme to the igx-avatar component mixin
-///   igx-avatar($my-button-theme);
-
+///   // Pass the theme to the igx-button component mixin
+///   @include igx-button($my-button-theme);
 @function igx-button-theme(
     // Global Button
     $button-roundness: null,
@@ -184,7 +183,6 @@
     );
 }
 
-/// Button Component
 /// @param {Map} $theme - The theme used to style the component.
 /// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
 /// @requires igx-button-theme
