--- a/src/core/styles/components/slider/_slider-theme.scss
+++ b/src/core/styles/components/slider/_slider-theme.scss
@@ -4,6 +4,17 @@
 /// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
 /// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
 ////
+
+/// @param {Color} $track-on-color [null] - The color of the track when the switch is on.
+/// @param {Color} $thumb-off-color [null] - The color of the thumb when the switch is off.
+/// @param {Color} $thumb-disabled-color [null] - The color of the thumb when the switch is disabled.
+/// @param {Color} $track-disabled-color [null] - The color of the track when the switch is disabled.
+/// @param {Bool} $light [false] - Determines the default color scheme - light or not.
+/// Set light to true when the surrounding area is dark.
+/// @example scss Set custom track and thumb on colors
+///   $my-switch-theme: igx-toast-theme($thumb-on-color: black, $track-on-color: yellow);
+///   // Pass the theme to the igx-tabbar component mixin
+///   @include igx-switch($my-switch-theme);
 @function igx-slider-theme(
     $track-color: null,
     $thumb-color: null,
@@ -18,6 +29,13 @@
     );
 }
 
+/// @param {Map} $theme - The theme used to style the component.
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
+/// @requires igx-slider-theme
+/// @requires igx-color
+/// @requires hexrgba
+/// @requires extend
+/// @requires rem
 @mixin igx-slider($theme, $palette: $default-palette) {
     $dark-theme: (
         track-color: igx-color($palette, 'secondary'),
