--- a/src/core/styles/components/grid-filtering/_grid-filtering-component.scss
+++ b/src/core/styles/components/grid-filtering/_grid-filtering-component.scss
@@ -1,4 +1,4 @@
-//// Grid Filtering
+////
 /// @group components
 /// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
 /// @requires {mixin} bem-block
